--- a/test-output/old/Testng Test/methods-not-run.html
+++ b/test-output/old/Testng Test/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>TEST_CASE.LoginTest.particularElement</td></tr>
+<tr><td>TEST_CASE.LoginTest.getScreenShot</td></tr>
+<tr><td>TEST_CASE.LoginTest.compareImages</td></tr>
+<tr><td>TEST_CASE.LoginTest.verifyLinks</td></tr>
 </table>
