--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">42,660</td><td></td><td></td></tr>
+<tr><th colspan="8">Testng Test</th></tr>
+<tr><td><a href="#t0">LoginTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,005</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TEST_CASE.LoginTest</td><td><a href="#m0">Login_With_Valid_Input</a></td><td rowspan="1">1719078204065</td><td rowspan="1">2076</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Testng Test</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TEST_CASE.LoginTest</td><td><a href="#m0">Login_With_Valid_Input</a></td><td rowspan="1">1720784720315</td><td rowspan="1">2614</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TEST_CASE.LoginTest#Login_With_Valid_Input</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>[mngr573828, AvErEmA]</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>LoginTest</h2><h3 id="m0">TEST_CASE.LoginTest#Login_With_Valid_Input</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>[mngr577888, ynetEqE]</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
